# not allowed to design without official permission from the script creator 

[package]
name = "arm64"
version = "1.0.1"
edition = "2024"

description = "A utility for optimizing SurfaceFlinger settings on Android devices."
authors = ["@UnixeID <betrix322@gmail.com>"]  
license = "GNU"
homepage = "https://github.com/Betrix-ID"  
repository = "https://github.com/Betrix-ID/Smart-SurfaceFlinger/tree/rustc"  
documentation = "https://developer.android.com/topic/performance/vitals/slow-session?hl=id"

[package.metadata]
telegram_channel = "https://t.me/Yeye_PID"  

[profile.release]
opt-level = "z"
strip = "symbols"